# learning_stm32mp135f_baremetal

./: .gitignore  ADD_THIRD_PARTY_REPO.md  flash.tsv  tasks.py
.gitlab/templates/: build-test.yml
docs/: add_third_party_repo.md  add_third_party_repo.md~  build_and_flash_bootloader.md  build_and_flash_bootloader.md~  build_minimal_image.md  configure_ethernet_gadget.md  configure_tftp.md  extract_rcc_regs.py  flash_to_sdcard.md  uboot.md
examples/advanced_linker_script/: README.md  main.c  meson.build  script.ld
examples/basic_timers_driver/: main.c  meson.build
examples/basic_timers_driver/dts/: stm32mp135f-dk-optee.dts
examples/blink_led/: README.md  main.c  main.old.c  meson.build  script.ld  startup.S  uart.h
examples/console_app/: cli.c  cli.h  cmd.c  cmd.h  help.h  main.c  memread.h  memwrite.h  meson.build  script.ld  sleep.h  startup.S  stdlib.h
examples/console_app/cmd/: echo.h  help.h  memread.h  memwrite.h  reboot.h  sleep.h
examples/debug_uart/: arm32-meson-cross-compile.txt  main.c  main.cp.c  main.s  meson.build  script.ld
examples/gpio_driver/: main.c  meson.build  rcc.h  utils.h
examples/linker_script/: README.md  arm32-meson-cross-compile.txt  linker.ld  main.c  meson.build  script.ld  startup.s
examples/linker_script_old/: main.c
examples/minimal_linker_script/: README.md  main.c  meson.build  script.ld
examples/secure_monitor_call_example/: main.c  meson.build  smc.h
examples/software_irq/: main.c  meson.build  script.ld
examples/uart_driver/: README.md  common.h  gpio.h  main.c  meson.build  rcc.h  uart.h  utils.h
examples/uart_driver/tests/: meson.build  test_rcc.c
examples/uart_interrupt_rx/: gic.h  main.c  meson.build  script.ld  startup.S
examples/uart_poll_rx/: abc.c  compile_commands.json  gpio.h  main.c  meson.build  script.ld  startup.S
examples/uart_poll_rx/tests/: meson.build  test_rcc.c  test_uart.c
scripts/: #build.mk#  .#build.mk  build.mk  compile_optee.sh  compile_tfa.sh  compile_uboot.sh
shared/: armv7a-cross-compile-meson.txt  common.h  genimage.cfg  gic.h  gpio.h  mystdio.h  mystdlib.h  mystring.h  rcc.h  stdlib.h  string.h  tim.h  time.expect  uart.h
tests/: meson.build  test_console_app.c  test_gic.c  test_stdio.c  test_str.c  test_str.h  test_tim.c  test_uart.c
tests/subprojects/: unity.wrap
tests/subprojects/packagefiles/unitydiffs/: 01.diff
